# website

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss  package-lock.json
.github/workflows/: docker-publish.yml
assets/css/: style.scss
nginx/: default.conf
src/: app.rs  build.rs  main.rs  router.rs
src/api/: mod.rs  tutorials.rs
src/api/youtube/: back_channel_videos.rs  channel_videos.rs  latest_video.rs  mod.rs  youtube_api.rs
src/components/: load_more_section.rs  mod.rs  navbar.rs  skeleton_grid.rs  video_card.rs  video_grid.rs
src/components/footer/: footer.rs  icon.rs  mod.rs
src/components/navbar/: header_button.rs  menu.rs  mod.rs  navbar.rs
src/pages/: about.rs  contact.rs  home.rs  mod.rs  not_found.rs  tutorials.rs
