[package]
name = "codeops-hq"
version = "0.1.0"
edition = "2021"
description = "A simple website for CodeOpsHQ"
readme = "README.md"
repository = "https://github.com/codeopshq/website"
license = "MIT"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
wasm-bindgen = "^0.2"
chrono = "^0.4"
yew-router = "0.18.0"
